--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "koa": "^2.11.0",
     "koa-router": "^8.0.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
