add middleware and user put request method

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/ganksolo/koa2-RESTful-API#readme",
   "dependencies": {
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^8.0.8",
     "mysql": "^2.18.1"
   },
