--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
+    "koa-convert": "^1.2.0",
+    "koa-csrf": "^3.0.8",
+    "koa-generic-session": "^2.0.4",
     "koa-jwt": "^3.6.0",
     "koa-parameter": "^3.0.1",
     "koa-router": "^8.0.8",
